--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -1,80 +1,80 @@
 #full-container
 {
-	width:100%;
-	background:#000;
+width:100%;
+background:#000;
 }
 #head-container
 {
-	color: #0000000;
-	background: #000;
+color:#000;
+background: #000;
+
 }
 
 #header
 {
-	margin:0 auto;
-	width: 600px;
-	height: 50px;
-	padding: 20px;
-	background-image:url('../images/logo.jpg');
+margin:0 auto;
+width: 600px;
+height: 75px;
+padding-right:400px;
+background-image:url('../images/logo.jpg');
 }
 #search-container
 {
-
-	top:45px;
-	right: 275px;
-	width: 300px;
-	background:#000;
+padding-left:400;
+top:45px;
+right: 0px;
+background:#000;
 }
 
 #navigation-container
 {
-	width: 870px;
-	height: 30px;
-	color: #000;
-	background: #CD3700;
+width: 870px;
+height: 30px;
+color: #000;
+background: #CD3700;
 
 }
 
 #navigation
 {
-	/*margin: 0 auto;*/
-	width: 900px;
+/*margin: 0 auto;*/
+width: 900px;
 }
 
 #navigation ul
 {
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
-	display: inline;
+margin: 0;
+padding: 0;
+list-style-type: none;
+display: inline;
 }
 
 
 #navigation li a
 {
-	display: block;
-	float: left;
-	padding: 5px 10px;
-	color: #fff;
-	text-decoration: none;
-	border-right: 1px solid #fff;
+display: block;
+float: left;
+padding: 5px 10px;
+color: #fff;
+text-decoration: none;
+border-right: 1px solid #fff;
 }
 
 #navigation li a:hover { background: #5E2612; }
 
 #top-container
 {
-	right
-	color: #000000;
+right
+color: #000000;
         background: #000;
 }
 #mainPhoto
 {
-	padding-left:50;
-	background-image:url('../images/mainPhoto_03.jpg');
-	margin: 0 auto;
+padding-left:50;
+background-image:url('../images/mainPhoto_03.jpg');
+margin: 0 auto;
 
-	height: 200px;
+height: 200px;
 }
 
 
@@ -82,78 +82,78 @@
 
 #content-container
 {
-	margin:0 auto;
-	width: 900px;
-	background:#000;
-	
+margin:0 auto;
+width: 900px;
+background:#000;
+
 }
 
 #content-container2
 {
-	float: left;
-	width: auto;
-	background:#0000;/*box of log in but around it */
-	color: #fff;
-	margin-top:4px;
+float: left;
+width: auto;
+background:#0000;/*box of log in but around it */
+color: #fff;
+margin-top:4px;
 }
 
 #content
 {
-	clear: left;
-	float: right;
-	width: 560px;
-	padding: 20px;
-	margin: 0 0 0 2px;
-	background:  #5E2612;
-	color: #fff;
-	
+clear: left;
+float: right;
+width: 560px;
+padding: 20px;
+margin: 0 0 0 2px;
+background: #5E2612;
+color: #fff;
+
 }
 
 #content h2 { margin: 0; }
 #aside
 {
-	float: left;
-	width: 268px;
-	height:418px;
-	padding: 0px 0;
-	display: inline;
+float: left;
+width: 268px;
+height:418px;
+padding: 0px 0;
+display: inline;
         background: #CD3700; /*place for log in */
-	text-align:center;
-	
+text-align:center;
+
 }
-#aside h3 
+#aside h3
 {
-	margin:0;
-	color:#fff;
-	text-align:left ;	
-	margin-top:30px;
-	margin-left:30px;
+margin:0;
+color:#fff;
+text-align:left ;
+margin-top:30px;
+margin-left:30px;
 }
 
 #quicklink-container
 {
-	margin-top:2px;
-	margin-right:1px;
-	width: 289px;
-	float: left;
-	background: #CD3700;
-	color: #fff;
-	text-align:center ;
-	height:140px;
-	
+margin-top:2px;
+margin-right:1px;
+width: 289px;
+float: left;
+background: #CD3700;
+color: #fff;
+text-align:center ;
+height:140px;
+
 }
 #footer-container
 {
-	clear: left;
-	color: #fff;
-	background: #000;
+clear: left;
+color: #fff;
+background: #000;
 }
 
 #footer
 {
-	margin: 20;
-	width: 900px;
-	text-align: center;
-	padding: 20px;
-	height: 10%;
+margin: 20;
+width: 900px;
+text-align: center;
+padding: 20px;
+height: 10%;
 }
