--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -20,7 +20,7 @@ background-image:url('../images/logo.jpg');
 }
 #search-container
 {
-padding-left:400px;
+padding-left:400;
 top:45px;
 right: 0px;
 background:#000;
@@ -28,7 +28,7 @@ background:#000;
 
 #navigation-container
 {
-width: 870px;
+width:900px;
 height: 30px;
 color: #000;
 background: #CD3700;
@@ -91,36 +91,40 @@ background:#000;
 #content-container2
 {
 float: left;
-width: auto;
+width: 900px;
+height: 500px;
 background:#0000;/*box of log in but around it */
 color: #fff;
-margin-top:4px;
+margin-top:0.1%;
 }
 
 #content
 {
 clear: left;
 float: right;
-width: 560px;
-padding: 20px;
-margin: 0 0 0 2px;
+width: 600px;
+padding:50 30 0 45px; /* top right bottom left*/
+margin: 0 0 0 0;
 background: #5E2612;
 color: #fff;
-
+height: 450px;
+text-align:auto;
 }
 
 #content h2 { margin: 0; }
 #aside
 {
 float: left;
-width: 268px;
-height:418px;
-padding: 0px 0;
+width: 230px;
+height: 500px;
+width:203px;
+padding: 0 20px 0 0 ;
 display: inline;
-        background: #CD3700; /*place for log in */
+background: #CD3700; /*place for log in */
 text-align:center;
 
 }
+#input {width: 120px;position:relative ; left:20px;}
 #aside h3
 {
 margin:0;
@@ -129,12 +133,32 @@ text-align:left ;
 margin-top:30px;
 margin-left:30px;
 }
+#button
+{
+ width:85px ;
+ text-align: center ;
+  position: relative ;
+  left:100px;
+}
+#text1
+{
+ text-align:left;
+ font-style:italic;
+ font-size:10px;
+ position: relative ;
+ bottom:40px;
+}
+#text
+{
+ font-size:13px;
+text-align:left;
+}
 
 #quicklink-container
 {
-margin-top:2px;
-margin-right:1px;
-width: 289px;
+margin-top:0.25%;
+margin-right:0.25%;
+width: 297px;
 float: left;
 background: #CD3700;
 color: #fff;
