--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -20,15 +20,16 @@ background-image:url('../images/logo.jpg');
 }
 #search-container
 {
-padding-left:450px;
+padding-left:400;
+top:45px;
+right: 0px;
 background:#000;
-height:35px;
 }
 
 #navigation-container
 {
 width:900px;
-height: 34px;
+height: 30px;
 color: #000;
 background: #CD3700;
 
@@ -56,6 +57,7 @@ float: left;
 padding: 5px 10px;
 color: #fff;
 text-decoration: none;
+border-right: 1px solid #fff;
 width:128px;
 text-align:center;
 }
@@ -76,14 +78,12 @@ margin: 0 auto;
 height: 200px;
 }
 
-
-
-
 #content-container
 {
 margin:0 auto;
 width: 900px;
 background:#000;
+height:auto;
 
 }
 
@@ -92,10 +92,11 @@ background:#000;
 float: left;
 width: 900px;
 height:auto;
-background:#0000;/*box of log in but around it */
+/*box of log in but around it */
 color: #fff;
 margin-top:0.1%;
 height:auto;
+background: #CD3700;
 }
 
 #content
@@ -107,18 +108,15 @@ padding:50 30 0 45px; /* top right bottom left*/
 margin: 0 0 0 0;
 background: #5E2612;
 color: #fff;
-height: auto;
 text-align:auto;
 }
 
 #p {}
-
 #content h2 { margin: 0; }
 #aside
 {
 float: left;
 width: 230px;
-height:auto;
 width:203px;
 padding: 0 20px 0 0 ;
 display: inline;
