--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -24,7 +24,8 @@ height:35px;
 padding-left:400px;
 top:45px;
 right: 0px;
-background:#000;
+margin-top:-40px;
+padding-bottom: 20px;
 }
 
 #navigation-container
