--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -165,9 +165,8 @@ overflow: hidden;
 
 #quicklink-container
 {
-margin-top:0.25%;
-margin-right:0.25%;
-width: 297px;
+margin-top:1px;
+width: 300px;
 float: left;
 background: #CD3700;
 color: #fff;
