--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -98,7 +98,7 @@ height:auto;
 color: #fff;
 margin-top:0.1%;
 height:auto;
-background: #CD3700;
+background: #8a2a02;
 
 }
 
@@ -109,7 +109,7 @@ float: right;
 width: 599px;
 padding:50 30 0 45px; /* top right bottom left*/
 margin: 0 0 0 0;
-background: #5E2612;
+background: #4e1501;
 color: #fff;
 border-left: 3px solid black;
 text-align:auto;
@@ -122,7 +122,7 @@ float: left;
 width:203px;
 padding: 0 20px 0 0 ;
 display: inline;
-background: #CD3700; /*place for log in */
+background: #8a2a02; /*place for log in */
 text-align:left;
 }
 #input {width: 105px;position:relative ; left:20px;bottom: 0px; }
@@ -169,7 +169,7 @@ margin-top:0.25%;
 margin-right:0.25%;
 width: 297px;
 float: left;
-background: #CD3700;
+background: #a03104;
 color: #fff;
 text-align:center ;
 height:140px;
